--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -298,6 +298,7 @@
   <string name="apps_item_virus_summary_uninstalled">APK</string>
   <string name="apps_list_header_title_sms">Tarkista viestien sovellus</string>
   <string name="apps_list_header_title_sms_access">Rajoita pääsyä vahvistuskoodeihin</string>
+  <string name="ask_create_shortcut">Luodaanko Aloitusnäytön pikakuvake?</string>
   <string name="auto_atsk_condition_battery_level_text_down">Kun akku saavuttaa %s</string>
   <string name="auto_atsk_condition_battery_level_text_up">Kun akkua on ladattu %s</string>
   <string name="auto_back_booster">Lopeta nopeuden parantaminen</string>
@@ -507,6 +508,7 @@
   <string name="card_main_deepclean_wechat_action">Tyhjennä</string>
   <string name="card_main_deepclean_wechat_summary">Vapauta tallennustilaa tyhjentämällä WeChat välimuisti</string>
   <string name="card_main_deepclean_wechat_title">WeChat välimuisti</string>
+  <string name="card_main_gamebooster_summary">Paranna pelien yhteyden vakautta</string>
   <string name="card_main_gamebooster_title">Pelien nopeuttaja</string>
   <string name="card_main_hbassistant_summary">Nopeuta &amp; paranna pelikokemusta</string>
   <string name="card_main_hbassistant_title">Pelien nopeuttaja</string>
@@ -650,7 +652,6 @@ Operaattorisi saattaa veloittaa sinulta lisäkustannuksia jos otat mobiilidatan 
   <string name="dialog_roaming_warning_checkbox">Älä näytä uudelleen</string>
   <string name="dialog_roaming_warning_message">Operaattorisi veloittaa sinulta maksun kansainvälisen dataroamingin käyttöönoton jälkeen. Otetaanko käyttöön siitä huolimatta?</string>
   <string name="dialog_roaming_warning_ok">Ota käyttöön</string>
-  <string name="dialog_text">Luo Aloitusnäytölle pikakuvake Pelien nopeuttajasta</string>
   <string name="dialog_title_attention">Huomio</string>
   <string name="dialog_title_auto_start_declare">Tietoa käynnistyksestä</string>
   <string name="dialog_title_stop_virus_scan">Lopeta tietoturvatarkistus</string>
@@ -711,8 +712,6 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="do_clean">Puhdistetaan…</string>
   <string name="domestic_roaming_setting">Kansainvälinen roaming</string>
   <string name="dont_bore">Älä anna painikkeiden ja ilmoituksien häiritä sinua</string>
-  <string name="dont_bore_text">Mykistä ilmoitukset ja poista painikkeet käytöstä poistaaksesi häiriötekijät</string>
-  <string name="dont_bore_title">Älä Häiritse -tila</string>
   <string name="download">Lataa</string>
   <string name="downloading">Ladataan</string>
   <string name="dual_setting_simcard1">SIM-kortti 1</string>
@@ -831,13 +830,7 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="game_booster_tab_top">Top</string>
   <string name="game_booster_title">Nopeuta</string>
   <string name="game_bootser_tab_settings">Nopeuttajan asetukset</string>
-  <string name="game_improve_text1">Tyhjennä taustalla oleva välimuisti vapauttaaksesi muistia pelaamista varten</string>
-  <string name="game_improve_text2">Tyhjennä taustalla oleva välimuisti vapauttaaksesi muistia pelaamista varten ja parantaaksesi suorittimen suorituskykyä</string>
-  <string name="game_improve_title">Optimoi suorituskyky</string>
   <string name="game_more_improve">Rajoita taustatyöskentelyä ja latausnopeutta säästääksesi akkua ja kaistanleveyttä pelejä varten</string>
-  <string name="game_net_text1">Rajoita taustalla tapahtuvaa latausnopeutta vähentääksesi verkon viivettä</string>
-  <string name="game_net_text2">Paranna pelien yhteyden nopeutta samaan aikaan, kun vähennetään verkon viivettä rajoittamalla taustalla tapahtuvaa latausnopeutta</string>
-  <string name="game_net_title">Optimoi yhteyden nopeus</string>
   <string name="game_setting">Peliasetukset</string>
   <string name="gamebooster_lowbattery_notification_summary">Lataa laitteesi, ennen kuin se sammuu.</string>
   <string name="gamebooster_lowbattery_notification_title">Akun taso on vähemmän, kuin 5%%</string>
@@ -853,10 +846,21 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="gateway_exception_summary2">Palvelimeen yhdistäminen epäonnistui</string>
   <string name="gateway_exception_title">Testaa reititin</string>
   <string name="gb_ad_game_size">Mt</string>
+  <string name="gb_create_icon_summary">Luo Aloitusnäytön pikakuvake</string>
   <string name="gb_cutoff">|</string>
   <string name="gb_description_image_button_answer">Vastaa</string>
   <string name="gb_description_image_button_reject">Hylkää</string>
   <string name="gb_description_image_button_video_answer">Videopuhelu</string>
+  <string name="gb_first_window_antimsg_summary_quick_answer">Käytä pikavastauksia</string>
+  <string name="gb_first_window_antimsg_summary_transparent_show">Näytä teksti läpinäkyvällä taustalla</string>
+  <string name="gb_first_window_antimsg_title">Kätevät ilmoitukset</string>
+  <string name="gb_first_window_gamebox_summary_four">Tyhjennä välimuisti, luo näytön nauhoituksia ja kuvakaappauksia</string>
+  <string name="gb_first_window_gamebox_summary_six">Käytä pikavastauksia, luo näytön nauhoituksia ja kuvakaappauksia</string>
+  <string name="gb_first_window_handsfree_summary">Ota kaiutin käyttöön automaattisesti</string>
+  <string name="gb_first_window_handsfree_title">Handsfree-puhelut</string>
+  <string name="gb_first_window_start">Aloita pelaaminen</string>
+  <string name="gb_first_window_summary">Paranna nopeutta ja suorituskykyä järjestelmätasolla</string>
+  <string name="gb_first_window_title">Pelien nopeuttaja</string>
   <string name="gb_get_gift_right_now">Kirjaudu sisään nyt</string>
   <string name="gb_have_signed">Kirjauduttu sisään tänään</string>
   <string name="gb_msg_completely_shielded">Piilota viestit</string>
@@ -970,8 +974,6 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="installing">Asennetaan</string>
   <string name="international_Ad">Mainos</string>
   <string name="international_roaming_setting">Ulkomaan roaming</string>
-  <string name="intro_improve">Paranna pelikokemustasi järjestelmätasolla</string>
-  <string name="intro_skip">Ohita</string>
   <string name="ip_address_exception_summary">IP-osoitetta ei saatu. Jos törmäät tähän ongelmaan uudelleen, kokeile asettaa kiinteä IP-osoite.</string>
   <string name="item_app_permission">Sovelluksen käyttöoikeudet</string>
   <string name="item_dev_mode">Kehittäjäasetukset</string>
@@ -1126,6 +1128,7 @@ vastausta"</string>
   <string name="main_toolbar_statistic">Datan käyttötilastot</string>
   <string name="main_used_bill">%s CNY</string>
   <string name="man_add_application">Lisää automaattisesti käynnistyvät sovellukset manuaalisesti</string>
+  <string name="manage_hybrid_permissions">Hallinnoi sovelluksen käyttöoikeuksia</string>
   <string name="managed_user_title">Kaikki työsovellukset</string>
   <string name="manual_input_free_traffic">Aseta hiljaisen ajan datan käyttö</string>
   <string name="manual_input_traffic">Aseta datan käyttö</string>
@@ -1206,6 +1209,25 @@ vastausta"</string>
   <string name="menu_report">Ilmoita virheestä</string>
   <string name="menu_setting_traffic">Aseta manuaalisesti</string>
   <string name="menu_sms">Lähetä viesti</string>
+  <string name="menu_summary_antispam">Estä puhelut ja viestit</string>
+  <string name="menu_summary_antispam_2">Estetyt puhelut ja viestit</string>
+  <string name="menu_summary_antivirus">Tarkista laitteesi viruksilta</string>
+  <string name="menu_summary_antivirus_2">Mahdollisia riskejä löytyi</string>
+  <string name="menu_summary_antivirus_3">Laitetta ei ole tarkistettu</string>
+  <string name="menu_summary_app_manager">Päivitä ja poista sovelluksia</string>
+  <string name="menu_summary_app_manager_2">Päivityksiä on saatavilla</string>
+  <string name="menu_summary_garbage_cleanup">Roskia ei löytynyt</string>
+  <string name="menu_summary_garbage_cleanup_2">Roskien koko</string>
+  <string name="menu_summary_garbage_cleanup_3">Tyhjennä roskat nyt</string>
+  <string name="menu_summary_networkassistants">Hallinnoi datasuunnitelmaasi</string>
+  <string name="menu_summary_networkassistants_2">Meni rajan yli</string>
+  <string name="menu_summary_networkassistants_3">Dataa on tarpeeksi jäljellä</string>
+  <string name="menu_summary_networkassistants_4">Data on loppumaisillaan</string>
+  <string name="menu_summary_power_manager">Virransäästö antaa lisää aikaa latausten välillä</string>
+  <string name="menu_summary_power_manager_1">Akku on ladattu täyteen</string>
+  <string name="menu_summary_power_manager_2">%s jäljellä</string>
+  <string name="menu_summary_power_manager_3">Yhdistä laturi</string>
+  <string name="menu_summary_power_manager_4">%s kunnes täynnä</string>
   <string name="menu_text_antispam">Estolista</string>
   <string name="menu_text_antivirus">Tietoturvatarkistus</string>
   <string name="menu_text_garbage_cleanup">Puhdistaja</string>
@@ -1220,7 +1242,6 @@ vastausta"</string>
   <string name="menu_text_optimize_manage">Paranna nopeutta</string>
   <string name="menu_text_power_manager">Akun käyttö</string>
   <string name="menu_text_power_percent">%s</string>
-  <string name="menu_text_power_percent_title_default">Akku</string>
   <string name="menu_wh_remove">Poista poikkeuksista</string>
   <string name="menu_white">Lisää poikkeuksiin</string>
   <string name="mi_pay_lucky">小米钱包</string>
@@ -1303,6 +1324,8 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="network_speed_for_apps_title">Yhteys</string>
   <string name="network_speed_for_apps_total">Yhteyden nopeus</string>
   <string name="network_test_speed">Testaa Wi-Fi-verkon nopeus</string>
+  <string name="network_traffic_warning_text">MIUI ei osaa laskea yksittäisen järjestelmäsovelluksen datan käyttötilastoja täällä. Voit nähdä datan käyttöön liittyvät tiedot sovelluksen tiedoista, mikäli sovellus käyttää mobiilidataa aktiivisesti.</string>
+  <string name="network_traffic_warning_title">Järjestelmäsovelluksien datan käyttö</string>
   <string name="networkchanged_exception_summary">Verkkoyhteys on muuttunut. Testaa uudelleen.</string>
   <string name="networkchanged_exception_title">Yhteys vaihdettu</string>
   <string name="never">1 kerta</string>
@@ -1766,8 +1789,6 @@ Kalibroinnin aikana, MIUI lähettää tekstiviestin operaattorillesi saadakseen 
   <string name="safe_result_item_info_system_version">MIUI on ajan tasalla</string>
   <string name="safepay_alert_dialog_button_continue">Jatka</string>
   <string name="safepay_alert_dialog_button_fix">Korjaa</string>
-  <string name="save_energy_text">Rajoita automaattista käynnistystä ja taustalla olevien sovelluksien synkronointia saadaksesi laitteesi akusta kaiken irti</string>
-  <string name="save_energy_title">Optimoi akku</string>
   <string name="sc_allow_network_dialog_message">Olet rajoittanut verkkoyhteyden ja sijaintitietojen käyttöä Tietoturvasovelluksen kautta. Anna Tietoturvasovellukselle vaaditut käyttöoikeudet tämän ominaisuuden käyttämiseksi.</string>
   <string name="sc_allow_network_dialog_tiltle">Tätä toimintoa ei voi käyttää</string>
   <string name="sc_system_risk_fix_info_xspace">Tätä ei voi ratkaista Toisessa tilassa. Yritä uudelleen Ensimmäisessä tilassa.</string>
@@ -1776,7 +1797,6 @@ Kalibroinnin aikana, MIUI lähettää tekstiviestin operaattorillesi saadakseen 
   <string name="scan_status_risk">Riskialtis</string>
   <string name="scan_status_safe">Turvallinen</string>
   <string name="scanning_bar_number">%d%%</string>
-  <string name="score_pts">%</string>
   <string name="search_input_txt_na">%s</string>
   <string name="search_result_text">Sovelluksia ei löytynyt</string>
   <string name="secondart_setting_title">红包提醒设置</string>
