--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -378,7 +378,7 @@ siirtyäksesi Toiseen tilaan Lukitusnäytöltä"</string>
   <string name="xspace_default_guide_notification_content">Vaihda napauttamalla</string>
   <string name="xspace_default_guide_notification_main_title">Käytetään oletussovellusta</string>
   <string name="xspace_default_guide_notification_xspace_title">Käytetään kaksoissovellusta</string>
-  <string name="xspace_default_setting_dialog_title">Oletus</string>
+  <string name="xspace_default_setting_dialog_title"> oletus</string>
   <string name="xspace_default_setting_label">Oletussovellus</string>
   <string name="xspace_description">"Kaksoissovellus on sovelluksen kopio, jossa voi käyttää eri tiliä.
 
