--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -2,62 +2,63 @@
 <resources>
   <!-- MIUI 10 valmis -->
   <string name="aod_mode_time_summary">Ajasta milloin laitteesi tulisi siirtyä Aina päällä -tilaan</string>
-     <string name="aod_mode_time_title">Ajastus</string>
-     <string name="aod_mode_turn_off">Pois käytöstä</string>
-     <string name="aod_mode_turn_on">Käytössä</string>
-     <string name="miui_lab_drive_mode_desc">Käytä ääniohjausta &amp; kuuntele WeChat viestejä</string>
-     <string name="miui_lab_drive_mode_title">Autotila</string>
-     <string name="miui_lab_super_resolution_desc">Tee kuvista terävempiä</string>
-     <string name="miui_lab_super_resolution_title">Super-resoluutio</string>
-     <string name="navigation_guide_appswitch_summary">Pyyhkäise näytön reunalta vasemmalle tai oikealla ja pidä hetken ajan painettuna</string>
-     <string name="navigation_guide_appswitch_title">Siirry edelliseen sovellukseen</string>
-     <string name="paper_mode_side_effect_hint">Suurempi voimakkuus voi vaikuttaa tapaan, jolla sisältö näkyy.</string>
-     <string name="status_bar_carrier_settings_no_sim_card">Ei SIM-korttia</string>
-     <string name="status_bar_settings_show_carrier_under_keyguard">Näytä operaattori laitteen ollessa lukittuna</string>
-     <string name="structure_add_facerecoginition_text">Lisää 3D kasvojen tiedot</string>
-     <string name="super_resolution_access_title">Käytettävissä olevat sovellukset</string>
-     <string name="super_resolution_desc">Tee kuvista tarkempia käyttäen AI-algoritmeja</string>
-     <string name="super_resolution_maintain">Super-resoluutio ei ole vielä käytettävissä.</string>
-     <string name="super_resolution_no_app_tips">Lataa WeChat ja Toutiao ensin.</string>
-     <string name="super_resolution_reboot_tips">Tämä ominaisuus mahdollistaa epäselvien WeChat- ja Toutiao-kuvien parantamisen. Käynnistä sovellukset uudelleen otettuasi ominaisuuden käyttöön.</string>
-     <string name="super_resolution_title">Super-resoluutio</string>
-     <string name="wifi_assistant">Wi-Fi avustaja</string>
-     <string name="wifi_assistant_auto_confirm_data_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Laitteesi käyttää mobiilidataa sen sijaan. Voit poistaa Wi-Fi avustajan käytöstä Asetuksista.</string>
-     <string name="wifi_assistant_confirm_always">Älä näytä uudelleen</string>
-     <string name="wifi_assistant_confirm_connection_title">Vahvista</string>
-     <string name="wifi_assistant_data_prompt">Näytä tiedonsiirtovaroitus</string>
-     <string name="wifi_assistant_data_prompt_summary">Näytä tiedonsiirtovaroitus, kun Wi-Fi avustaja vaihtaa mobiilidataan</string>
-     <string name="wifi_assistant_description">"Näin Wi-Fi avustaja toimii:
-1. Kun Wi-Fi-yhteys on heikko, Wi-Fi avustaja yrittää yhdistää laitteesi toisiin käytettävissä oleviin Wi-Fi-verkkoihin.
-2. Jos kaikki käytettävissä olevat Wi-Fi-yhteydet ovat heikkoja ja mobiilidata on otettu käyttöön, Wi-Fi avustaja vaihtaa mobiilidataan."</string>
-     <string name="wifi_assistant_disconnect">Katkaise yhteys</string>
-     <string name="wifi_assistant_explicitly_confirm_data_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Käytetäänkö mobiilidataa sen sijaan?</string>
-     <string name="wifi_assistant_explicitly_confirm_disconnect">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Katkaistaanko yhteys nyt?</string>
-     <string name="wifi_assistant_explicitly_confirm_wifi_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Toisia Wi-Fi-verkkoja on käytettävissä. Vaihdetaanko verkkoja?</string>
-     <string name="wifi_assistant_keep_connection">Pysy yhdistettynä</string>
-     <string name="wifi_assistant_off">Pois käytöstä</string>
-     <string name="wifi_assistant_ok">OK</string>
-     <string name="wifi_assistant_on">Käytössä</string>
-     <string name="wifi_assistant_setup_wifi_assistant">Määritä</string>
-     <string name="wifi_assistant_summary">Vaihda Wi-Fi-verkkojen ja mobiilidatan välillä, kun Wi-Fi-yhteys on heikko</string>
-     <string name="wifi_assistant_switch_data">Käytä mobiilidataa</string>
-     <string name="wifi_assistant_switch_wifi">Vaihda verkkoja</string>
-     <string name="wifi_connection_management">Hallinnoi Wi-Fi-yhteyksiä</string>
-     <string name="wifi_eap_options_advanced">Lisäasetukset</string>
-     <string name="wifi_eap_options_simple">Asetukset</string>
-     <string name="wifi_network_optimization">Optimaalinen yhteys</string>
-     <string name="wifi_other_connection_mode">Muut yhteysasetukset</string>
-     <string name="wifi_property">Wi-Fi-ominaisuudet</string>
-     <string name="wifi_remembered_disabled_auto_connect">Tallennettu. Automaattinen yhdistäminen pois käytöstä.</string>
-     <string name="wifi_traffic_priority">Wi-Fi nopeustila</string>
-     <string name="wifi_traffic_priority_extreme">Äärimmäinen tila</string>
-     <string name="wifi_traffic_priority_extreme_summary">Anna suurin osa kaistanleveydestä etualalla olevalle sovellukselle. Taustaprosessit ei välttämättä pysty yhdistämään verkkoon.</string>
-     <string name="wifi_traffic_priority_off">Pois käytöstä</string>
-     <string name="wifi_traffic_priority_on">Käytössä</string>
-     <string name="wifi_traffic_priority_regular">Tavallinen tila</string>
-     <string name="wifi_traffic_priority_regular_summary">Jaa kaistanleveys taustaprosessien ja etualalla olevan sovelluksen kanssa</string>
-     <string name="wifi_traffic_priority_summary">Priorisoi yhteyden nopeus automaattisesti</string>
-     <!-- MIUI 10 valmis -->
+  <string name="aod_mode_time_title">Ajastus</string>
+  <string name="aod_mode_turn_off">Pois käytöstä</string>
+  <string name="aod_mode_turn_on">Käytössä</string>
+  <string name="miui_lab_drive_mode_desc">Käytä ääniohjausta &amp; kuuntele WeChat viestejä</string>
+  <string name="miui_lab_drive_mode_title">Autotila</string>
+  <string name="miui_lab_super_resolution_desc">Tee kuvista terävempiä</string>
+  <string name="miui_lab_super_resolution_title">Super-resoluutio</string>
+  <string name="navigation_guide_appswitch_summary">Pyyhkäise näytön reunalta vasemmalle tai oikealla ja pidä hetken ajan painettuna</string>
+  <string name="navigation_guide_appswitch_title">Siirry edelliseen sovellukseen</string>
+  <string name="paper_mode_side_effect_hint">Suurempi voimakkuus voi vaikuttaa tapaan, jolla sisältö näkyy.</string>
+  <string name="status_bar_carrier_settings_no_sim_card">Ei SIM-korttia</string>
+  <string name="status_bar_settings_show_carrier_under_keyguard">Näytä operaattori laitteen ollessa lukittuna</string>
+  <string name="structure_add_facerecoginition_text">Lisää kasvojen 3D-tiedot</string>
+  <string name="structure_manage_facerecoginition_text">Hallinnoi kasvojen 3D-tietoja</string>
+  <string name="super_resolution_access_title">Käytettävissä olevat sovellukset</string>
+  <string name="super_resolution_desc">Tee kuvista tarkempia käyttäen AI-algoritmeja</string>
+  <string name="super_resolution_maintain">Super-resoluutio ei ole vielä käytettävissä.</string>
+  <string name="super_resolution_no_app_tips">Lataa WeChat ja Toutiao ensin.</string>
+  <string name="super_resolution_reboot_tips">Tämä ominaisuus mahdollistaa epäselvien WeChat- ja Toutiao-kuvien parantamisen. Käynnistä sovellukset uudelleen otettuasi ominaisuuden käyttöön.</string>
+  <string name="super_resolution_title">Super-resoluutio</string>
+  <string name="wifi_assistant">Wi-Fi avustaja</string>
+  <string name="wifi_assistant_auto_confirm_data_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Laitteesi käyttää mobiilidataa sen sijaan. Voit poistaa Wi-Fi avustajan käytöstä Asetuksista.</string>
+  <string name="wifi_assistant_confirm_always">Älä näytä uudelleen</string>
+  <string name="wifi_assistant_confirm_connection_title">Vahvista</string>
+  <string name="wifi_assistant_data_prompt">Näytä tiedonsiirtovaroitus</string>
+  <string name="wifi_assistant_data_prompt_summary">Näytä tiedonsiirtovaroitus, kun Wi-Fi avustaja vaihtaa mobiilidataan</string>
+  <string name="wifi_assistant_description">"Näin Wi-Fi avustaja toimii:
+  1. Kun Wi-Fi-yhteys on heikko, Wi-Fi avustaja yrittää yhdistää laitteesi toisiin käytettävissä oleviin Wi-Fi-verkkoihin.
+  2. Jos kaikki käytettävissä olevat Wi-Fi-yhteydet ovat heikkoja ja mobiilidata on otettu käyttöön, Wi-Fi avustaja vaihtaa mobiilidataan."</string>
+  <string name="wifi_assistant_disconnect">Katkaise yhteys</string>
+  <string name="wifi_assistant_explicitly_confirm_data_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Käytetäänkö mobiilidataa sen sijaan?</string>
+  <string name="wifi_assistant_explicitly_confirm_disconnect">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Katkaistaanko yhteys nyt?</string>
+  <string name="wifi_assistant_explicitly_confirm_wifi_message">Tällä Wi-Fi-verkolla ei ole internetyhteyttä. Toisia Wi-Fi-verkkoja on käytettävissä. Vaihdetaanko verkkoja?</string>
+  <string name="wifi_assistant_keep_connection">Pysy yhdistettynä</string>
+  <string name="wifi_assistant_off">Pois käytöstä</string>
+  <string name="wifi_assistant_ok">OK</string>
+  <string name="wifi_assistant_on">Käytössä</string>
+  <string name="wifi_assistant_setup_wifi_assistant">Määritä</string>
+  <string name="wifi_assistant_summary">Vaihda Wi-Fi-verkkojen ja mobiilidatan välillä, kun Wi-Fi-yhteys on heikko</string>
+  <string name="wifi_assistant_switch_data">Käytä mobiilidataa</string>
+  <string name="wifi_assistant_switch_wifi">Vaihda verkkoja</string>
+  <string name="wifi_connection_management">Hallinnoi Wi-Fi-yhteyksiä</string>
+  <string name="wifi_eap_options_advanced">Lisäasetukset</string>
+  <string name="wifi_eap_options_simple">Asetukset</string>
+  <string name="wifi_network_optimization">Optimaalinen yhteys</string>
+  <string name="wifi_other_connection_mode">Muut yhteysasetukset</string>
+  <string name="wifi_property">Wi-Fi-ominaisuudet</string>
+  <string name="wifi_remembered_disabled_auto_connect">Tallennettu. Automaattinen yhdistäminen pois käytöstä.</string>
+  <string name="wifi_traffic_priority">Wi-Fi nopeustila</string>
+  <string name="wifi_traffic_priority_extreme">Äärimmäinen tila</string>
+  <string name="wifi_traffic_priority_extreme_summary">Anna suurin osa kaistanleveydestä etualalla olevalle sovellukselle. Taustaprosessit ei välttämättä pysty yhdistämään verkkoon.</string>
+  <string name="wifi_traffic_priority_off">Pois käytöstä</string>
+  <string name="wifi_traffic_priority_on">Käytössä</string>
+  <string name="wifi_traffic_priority_regular">Tavallinen tila</string>
+  <string name="wifi_traffic_priority_regular_summary">Jaa kaistanleveys taustaprosessien ja etualalla olevan sovelluksen kanssa</string>
+  <string name="wifi_traffic_priority_summary">Priorisoi yhteyden nopeus automaattisesti</string>
+  <!-- MIUI 10 valmis -->
   <string name="Accounts_settings_title">Tilit</string>
   <string name="abc_action_bar_home_description">Siirry etusivulle</string>
   <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
@@ -3132,7 +3133,6 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="notification_sound_default">Ilmoituksen oletusääni</string>
   <string name="notification_sound_dialog_title">Ilmoituksen oletusääni</string>
   <string name="notification_sound_title">Ilmoituksen oletusääni</string>
-  <string name="notification_suggestion_summary">Näytä tai piilota ilmoituksen sisältö</string>
   <string name="notification_suggestion_title">Hallitse lukitusnäytön ilmoituksia</string>
   <string name="notification_summary_level">Taso %d</string>
   <string name="notification_summary_none">Käytössä kaikissa sovelluksissa</string>
@@ -3723,6 +3723,7 @@ Bluetooth."</string>
   <string name="retail_demo_reset_next">Seuraava</string>
   <string name="retail_demo_reset_title">Salasana vaaditaan</string>
   <string name="retry">Yritä uudelleen</string>
+  <string name="rgb_manage_facerecoginition_text">Hallinnoi kasvojen 2D-tietoja</string>
   <string name="ring_volume_option_title">Soittoäänen voimakkuus</string>
   <string name="ring_volume_title">Soittoäänen voimakkuus</string>
   <string name="ringtone_slot_setting_title">Yhden SIM-kortin asetukset</string>
@@ -4488,9 +4489,11 @@ Laitteeseesi asennettu luotettu varmenne tekee tämän mahdolliseksi."</string>
   <string name="status_bar_settings_no_carrier">Ei mitään</string>
   <string name="status_bar_settings_notification_bar">Ilmoitusalue</string>
   <string name="status_bar_settings_notification_led">Ilmoituksen valo</string>
+  <string name="status_bar_settings_notification_led_custom">Mukautettu väri</string>
   <string name="status_bar_settings_notification_priority">Prioriteetti</string>
   <string name="status_bar_settings_notification_priority_summary">Näytä ilmoitukset listan kärjessä</string>
   <string name="status_bar_settings_notification_sound">Ääni</string>
+  <string name="status_bar_settings_notification_sound_custom">Mukautettu ääni</string>
   <string name="status_bar_settings_notification_vibrate">Värinä</string>
   <string name="status_bar_settings_show_carrier">Näytä operaattorin nimi</string>
   <string name="status_bar_settings_show_carrier_summary">Operaattorin nimi silti näytetään Lukitusnäytöllä ja ilmoitusalueella vaikka tämä ominaisuus ei ole käytössä</string>
@@ -5018,6 +5021,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="unlock_set_unlock_summary">Aseta näytön lukitus</string>
   <string name="unlock_setup_wizard_fingerprint_details">Kun olet määrittänyt näytön lukituksen, voit määrittää myös sormenjälkesi kohdassa Asetukset &gt; Tietoturva.</string>
   <string name="unmount_inform_text">USB-tallennustila poistetaan käytöstä</string>
+  <string name="unmute_sound_title">Poista mykistys</string>
   <string name="unrestrict_max_aspect_ratio_title">Nämä sovellukset ovat optimoitu kokonäyttötilaa varten</string>
   <string name="unrestricted_app_summary">Salli rajoittamaton data Data Saverin kanssa</string>
   <string name="unrestricted_app_title">Rajoittamaton datan käyttö</string>
