--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,24 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="abc_action_bar_home_description">Siirry etusivulle</string>
+  <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
+  <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
+  <string name="abc_action_bar_up_description">Siirry ylös</string>
+  <string name="abc_action_menu_overflow_description">Lisää</string>
+  <string name="abc_action_mode_done">Valmis</string>
+  <string name="abc_activity_chooser_view_see_all">Näytä kaikki</string>
+  <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
+  <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
+  <string name="abc_capital_on">KÄYTÖSSÄ</string>
+  <string name="abc_search_hint">Haku…</string>
+  <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
+  <string name="abc_searchview_description_query">Hakulauseke</string>
+  <string name="abc_searchview_description_search">Haku</string>
+  <string name="abc_searchview_description_submit">Lähetä kysely</string>
+  <string name="abc_searchview_description_voice">Puhehaku</string>
+  <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
+  <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
+  <string name="abc_toolbar_collapse_description">Tiivistä</string>
   <string name="account_info">Tilini</string>
   <string name="account_name_not_login">Kirjaudu sisään</string>
   <string name="account_unactivated">Tili ei ole aktivoitu</string>
@@ -15,6 +34,7 @@
   <string name="apply_theme_with_ringtones">Käytä teeman soittoääniä</string>
   <string name="audio_duration_minutes_format">%1$d minuuttia</string>
   <string name="audio_duration_seconds_format">%1$d sekuntia</string>
+  <string name="automatically_update_using_theme_tips">Päivitä automaattisesti seuraavalla kerralla</string>
   <string name="backup_theme_dialog_message">Varmuuskopioidaanko nykyinen teemasi?</string>
   <string name="backup_theme_dialog_ok">Varmuuskopioi</string>
   <string name="backup_theme_fail_trial_rights_message">Kokeilussa olevia kohteita ei voi varmuuskopioida</string>
@@ -31,11 +51,14 @@
   <string name="card_retry">Yritä uudelleen</string>
   <string name="change_host_hint">Vaihda isäntää</string>
   <string name="change_wallpaper">Taustakuva</string>
+  <string name="character_counter_pattern">%1$d / %2$d</string>
+  <string name="classification_more_understand_you">Valitse suosikki kategoriasi</string>
   <string name="close">Sulje</string>
   <string name="component_backup_preference_title">Varmuuskopioi teema</string>
   <string name="component_category_finest_title">YLEINEN</string>
   <string name="component_category_more_title">LISÄÄ</string>
   <string name="component_title_ringtone">Soittoääni</string>
+  <string name="component_title_video_wallpaper">Taustakuvaelokuvat</string>
   <string name="component_title_wallpaper">Taustakuva</string>
   <string name="current_using_desktop_wallpaper_text">Aloitusnäyttö</string>
   <string name="current_using_lockscreen_wallpaper_text">Lukitusnäyttö</string>
@@ -52,7 +75,7 @@
   <string name="desktop_wallpaper">Aloitusnäyttö</string>
   <string name="dev_options">Kehittäjäasetukset</string>
   <string name="dev_options_summary">Verkkolähteet</string>
-  <string name="download_failed">Lataus epäonnistui</string>
+  <string name="download_failed">Lataaminen epäonnistui</string>
   <string name="download_preview_failed">Esikatselun lataaminen epäonnistui</string>
   <string name="download_success">Lataus valmistui</string>
   <string name="fail_to_add_account">Tilin lisääminen epäonnistui</string>
@@ -97,7 +120,8 @@
   <string name="home_apply_failured">Aloitusnäytön taustakuvaa ei voi asettaa</string>
   <string name="home_apply_success">Aloitusnäytön taustakuva asetettu</string>
   <string name="in_the_end">Ei enempää näytettäviä kohteita</string>
-  <string name="incompatible_dialog_message">Tämä teema ei ole täysin yhteensopiva MIUI 9:n kanssa. Jotkut elementit saattavat näkyä väärin.</string>
+  <string name="incompatible_dialog_cancel">Älä aseta</string>
+  <string name="incompatible_dialog_message">Tämä teema ei ole yhteensopiva laitteellesi asennetun MIUI-version kanssa. Jotkut osat MIUI:ssa ei välttämättä toimi oikein jos asetat tämän teeman.</string>
   <string name="incompatible_dialog_ok">Selvä</string>
   <string name="incompatible_dialog_title">Yhteensopivuusongelmia</string>
   <string name="is_setting_wallpaper_message">Asetetaan taustakuvaa…</string>
@@ -134,22 +158,18 @@
   <string name="online_no_network">Verkkoyhteyttä ei voi muodostaa</string>
   <string name="online_precust_abstract">Abstrakti</string>
   <string name="online_precust_animal">Eläin</string>
-  <string name="online_precust_asphalt">Asfaltti</string>
-  <string name="online_precust_black_gold">Rodium</string>
   <string name="online_precust_building">Rakennus</string>
-  <string name="online_precust_chubby_dreamer">Pullea uneksija</string>
   <string name="online_precust_creative">Luova</string>
-  <string name="online_precust_forest_stories">Metsien tarinat</string>
+  <string name="online_precust_hatsune">Hatsune</string>
   <string name="online_precust_geometry">Geometria</string>
   <string name="online_precust_lifestyle">Elämäntyyli</string>
-  <string name="online_precust_mi_note2">Mi Note 2</string>
-  <string name="online_precust_paper_world">Paperimaailma</string>
-  <string name="online_precust_peach_blossom">Persikan kukinta</string>
+  <string name="online_precust_museum">Englannin museo</string>
   <string name="online_precust_plant">Kasvi</string>
   <string name="online_precust_scenery">Maisema</string>
-  <string name="online_precust_tiny">Pikkuruinen</string>
   <string name="online_search_hint">Etsi verkkolähteitä</string>
+  <string name="password_toggle_content_description">Vaihda salasanan näkyvyys</string>
   <string name="present_local_themes">Teemani</string>
+  <string name="present_local_themes_subtitle">Mukauta laitteesi</string>
   <string name="present_official_themes">Meidän valinnat</string>
   <string name="present_online_themes">Hae lisää teemoja verkosta</string>
   <string name="provision_default_theme_title">Oletus</string>
@@ -160,6 +180,12 @@
   <string name="purchased_list_current">Optimoidut teemat</string>
   <string name="purchased_list_legacy">Legacy teemat</string>
   <string name="recently_used">Äskettäin käytetty</string>
+  <string name="refresh_footer_all_loaded">Siinä kaikki tältä erää.</string>
+  <string name="refresh_footer_failed">Tietoja ei voitu ladata</string>
+  <string name="refresh_footer_finish">Ladattiin onnistuneesti</string>
+  <string name="refresh_footer_loading">Odota hetki…</string>
+  <string name="refresh_footer_pullup">Lataa lisää vetämällä ylös</string>
+  <string name="refresh_footer_release">Lataa lisää vapauttamalla</string>
   <string name="region_not_support">Teemat ei ole tuettu sinun alueellasi.</string>
   <string name="reload">Yritä uudelleen</string>
   <string name="resource_account_abnormal_state">Tilivirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
@@ -368,24 +394,28 @@
   <string name="resource_user_know">OK</string>
   <string name="resource_waiting_download">Odotetaan</string>
   <string name="resource_waiting_pause">Pysäytä</string>
+  <string name="resource_wallpaper_download">Lataa taustakuva</string>
   <string name="ringtone_set_success">Asetettu onnistuneesti</string>
   <string name="sdcard_not_mounted_dialog_message">Syötä SD-kortti nyt.</string>
   <string name="sdcard_not_mounted_dialog_title">SD-korttia ei havaittu</string>
   <string name="search_hint_header_text">Suositut hakusanat</string>
+  <string name="search_menu_title">Haku</string>
   <string name="selected_resource_file_invalid">Valittua lähteen tiedostoa ei voi käyttää</string>
+  <string name="set_color_ring_back_tone">Aseta mukautettu soittoääni</string>
   <string name="settings">Asetukset</string>
+  <string name="show_free">Näytä ilmaiset %1$s</string>
+  <string name="show_incompatible">Näytä yhteensopimattomat %1$s</string>
   <string name="system_precust">Esiasennettu</string>
   <string name="the_picture_is_not_support">Kuvaa ei tueta</string>
   <string name="the_picture_is_too_small">Kuva on liian pieni</string>
-  <string name="theme_apply_audio_dialog_item_alarm">Herätys</string>
+  <string name="theme_apply_audio_dialog_item_alarm">Hälytys</string>
+  <string name="theme_apply_audio_dialog_item_color_ring_back_tone">Mukautettu soittoääni</string>
   <string name="theme_apply_audio_dialog_item_notification">Ilmoitus</string>
   <string name="theme_apply_audio_dialog_item_ringtone">Soittoääni</string>
   <string name="theme_apply_failured">Lukitusnäytön taustakuvan asettaminen epäonnistui</string>
   <string name="theme_apply_success">Asetettu Lukitusnäytölle</string>
   <string name="theme_applying">Asetetaan…</string>
   <string name="theme_batch_update_all">Päivitä kaikki</string>
-  <string name="theme_batch_update_dlg_content">Päivitetäänkö %1$s ja %2$d muuta teemaa nyt?</string>
-  <string name="theme_batch_update_dlg_content_single">Päivitetäänkö %1$s nyt?</string>
   <string name="theme_batch_update_dlg_title">Päivitä teema</string>
   <string name="theme_batch_updating_text">Päivitetään (%1$d)</string>
   <string name="theme_bug_report">Raportoi Bugista</string>
@@ -432,10 +462,6 @@
   <string name="theme_is_external_priority_storage_summary">Teema-sovellus käynnistyy uudelleen heti tämän asetuksen asettamisen jälkeen.</string>
   <string name="theme_multiple_button_title_customize">Kustomoi</string>
   <string name="theme_no">Ei</string>
-  <string name="theme_precast_create_notification_content">Näytä uudet teemat napauttamalla.</string>
-  <string name="theme_precast_create_notification_title">Päivitetty MIUI 7:ään</string>
-  <string name="theme_precast_update_notification_content">Näytä päivitykset napauttamalla.</string>
-  <string name="theme_precast_update_notification_title">MIUI 7 teemat päivitetty</string>
   <string name="theme_purchased_list_empty">Et ole ostanut yhtään teemaa.</string>
   <string name="theme_purchased_non_local">Online</string>
   <string name="theme_select_others">Selaa</string>
@@ -456,6 +482,7 @@
   <string name="title_component">Kustomoi teema</string>
   <string name="title_my_audio_resource">Soittoääneni</string>
   <string name="title_my_miwallpaper_resource">Live taustakuvani</string>
+  <string name="title_my_miwallpaper_video_file_resource">Videotaustakuvani</string>
   <string name="title_my_wallpaper_resource">Taustakuvani</string>
   <string name="title_system_audio_notification_resource">Järjestelmän ilmoitukset</string>
   <string name="title_system_audio_resource">Järjestelmän soittoäänet</string>
@@ -465,6 +492,16 @@
   <string name="uid_change_dialog_ok">Selvä</string>
   <string name="uid_change_dialog_title">Käynnistä laite</string>
   <string name="up_to_the_end">Siinä kaikki tältä erää. Palaa takaisin myöhemmin.</string>
+  <string name="update_immediately">Päivitä nyt</string>
+  <string name="using_theme_has_update_tips">Päivitys on saatavilla tälle teemalle.</string>
+  <string name="using_theme_next_automatic_update">Automaattiset päivitykset</string>
+  <string name="using_theme_next_automatic_update_summary">Päivitä ladatut teemat automaattisesti Wi-Fi-yhteydellä, kun näyttö on lukittu</string>
+  <string name="video_apply_home">Aloitusnäyttö</string>
+  <string name="video_apply_home_lock">Aloitusnäyttö ja Lukitusnäyttö</string>
+  <string name="video_audio_apply_success">Määritettiin video äänellä onnistuneesti</string>
+  <string name="video_data_tips_message">Mobiilidatan käyttäminen voi aiheuttaa lisäkustannuksia. Jatketaanko siitä huolimatta?</string>
+  <string name="video_data_tips_title">Tiedonsiirtovaroitus</string>
+  <string name="video_silence_apply_success">Määritettiin video ilman ääntä onnistuneesti</string>
   <string name="wallpaper_apply">Aseta</string>
   <string name="wallpaper_crop">Rajaa</string>
   <string name="wallpaper_decoded_error">Taustakuvan lataaminen epäonnistui</string>
@@ -478,4 +515,7 @@
   <string name="wallpaper_settings_no_history">Ei historiaa</string>
   <string name="wallpaper_settings_pad_more_page_title">Lisää taustakuvia</string>
   <string name="wallpaper_settings_page_title">Taustakuva</string>
+  <string name="xiaoai_speech_not_installed_download">Lataa</string>
+  <string name="xiaoai_speech_not_installed_message">Lataa ja asenna Mi AI-ääniavustaja jatkaaksesi.</string>
+  <string name="xiaoai_speech_not_installed_title">Mi AI-ääniavustajaa ei ole asennettu.</string>
 </resources>
