--- a/Finnish/main/Telecom.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Telecom.apk/res/values-fi-rFI/strings.xml
@@ -140,7 +140,7 @@ Siirtonopeus"</string>
   <string name="charge_length_format">%1$s sitten</string>
   <string name="choose_profile">Valitse profiili</string>
   <string name="clear_adb_keys">Peruuta USB-vianetsinnän käyttöoikeudet</string>
-  <string name="close">Sulje</string>
+  <string name="close">Poista käytöstä</string>
   <string name="confirm_enable_oem_unlock_text">VAROITUS: laitteen suojaustoiminnot eivät toimi tämän asetuksen ollessa käytössä.</string>
   <string name="confirm_enable_oem_unlock_title">Sallitaanko OEM:n lukituksen avaus?</string>
   <string name="connected_via_network_scorer">Automaattinen yhteys muodostettu palvelun %1$s kautta</string>
